@startuml
skinparam monochrome true
' skinparam classAttributeFontName Cambria
' skinparam classAttributeFontSize 13

class Tools{
  -_epsilon : const double 
  +CalculateRMSE()
  +CalculateJacobian()
  +CalculateProcessCovarianceMatrix()
  +MapRadarPolarToCartesianPosition()
  +MapXprimeToPolarCoordinates()
  +AdjustPhiVectorY()
}
class KalmanFilter{
  -x_ Eigen::VectorXd 
  -P_ Eigen::MatrixXd 
  -F_ Eigen::MatrixXd 
  -I_ Eigen::MatrixXd 
  +Q Eigen::MatrixXd 
  +H Eigen::MatrixXd 
  +R Eigen::MatrixXd 

  -updateStateTransitionMatrix() : void
  +Init() : void
  +Predict() : void
  +Update() : void
  +UpdateEKF() : void
  +GetX() const : VectorXd
  +GetP() const : MatrixXd

}
class FusionEKF{
 +ProcessMeasurement() : void
 
 -R_laser_ : MatrixXd
 -R_radar_ : MatrixXd
 -H_laser_ : MatrixXd
 
 -InitalizeKalmanFilter() : void
 -GetDeltaTime() : double
 
}
class Data{
 SensorType : enum
 values : VectorXd 
}
class EkfFileHandler{ 
 +check_files() : bool
 +read_file() : void
 +write_to_file() : void
}
class PlotData{ 
 +addPoint() : void
 +getAllX() const : std::vector<double>
 +getAllY() const : std::vector<double>
 +getTitle() const : std::string 
}
Tools *-- FusionEKF
Tools *-- KalmanFilter
Data <|-- MeasurementPackage
Data <|-- GroundTruthPackage
KalmanFilter *-- FusionEKF
MeasurementPackage .. FusionEKF
MeasurementPackage .. EkfFileHandler
GroundTruthPackage .. EkfFileHandler
@enduml